1999-01-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Colormap.m, Graph.m, Histogram.m, Pixmap.m, Widget.m,
	WindowGeometryRecord.m, ZoomRaster.m: Change from raiseEvent:
	to raiseEvent().

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-loadWindowGeometryRecord], [ArchivedGeometryWidget
	-updateArchiver], [ArchivedGeometryWidget -drop]): 
	Use lispArchiver instead of archiver.

	* internal.m (x_set_private_colormap, tkobjc_raster_setColormap):
	Use WarningMessage instead of Warning.
	(xpmerrcheck): Use WarningMessage instead of Warning and
	PixmapError instead of Error.

	* win32dib.c (get_color): New function.
	(dib_augmentPalette, dib_fill, dib_ellipse, dib_line, dib_rectangle): 
	Use it.

	* win32dib.[hc] (dib_fill, dib_ellipse, dib_line, dib_rectangle): 
	Make color argument an unsigned int.

1999-01-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (tkobjc_raster_copy): Don't free old pixmap (X11 case).
	(tkobjc_raster_setColormap): Raise a warning if colormap is nil.
	If unset, set eraseColor to black before augmenting palette;
	avoid gratuitous duplication in win32dib palette.
	(tkobjc_pixmap_update_raster): Disable palette augments for pixmaps.

	* internal.[hm] (tkobjc_raster_dropOldPixmap): New function.

	* Raster.m ([Raster -setWidth:Height:]): Use it.
	Reset colormap after creating resized pixmap.

	* internal.m (setSecondaryPath): Use share/ instead of ../library.
	Swarm 1.4 Win32 layout will follow GNU conventions.

	* TkExtra.m (ensureBltSupportFiles): Likewise (share/blt8.0).

1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CURRENT): Bump.

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-loadWindowGeometryRecord]): Use lispGet: instead of
	lispArchiverGet().
	([ArchivedGeometryWidget -updateArchiver]): Likewise.  Use
	lispPutShallow: instead of lispArchiverPut().

1999-01-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* WindowGeometryRecord.[hm] ([WindowGeometryRecord -lispOutDeep:]): 